--- a/.prettierrc
+++ b/.prettierrc
@@ -7,7 +7,7 @@
   "importOrder": [
     "^@.*/(.*)$",
     "<THIRD_PARTY_MODULES>",
-    "^(App|components|pages|store|utils)",
+    "^(App|components|pages|store|utils|stories|models|store|constants|assets|_i18n)",
     "^[./].*(?<![.]css)$",
     "^[./].*(?<=[.]css)$"
   ],
