--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
+    "resolveJsonModule": true,
     "paths": {
       "src/*": [
         "*"
