--- a/package.json
+++ b/package.json
@@ -5,42 +5,76 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@emotion/react": "^11.8.2",
+    "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.5.1",
+    "@fontsource/roboto": "^4.5.7",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.4",
     "@mui/x-data-grid": "^5.8.0",
     "axios": "^0.26.1",
     "camelcase-keys": "7.0.2",
+    "clsx": "^1.1.1",
+    "dayjs": "^1.11.2",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "jotai": "^1.7.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^11.16.2",
-    "react-router-dom": "^6.2.2",
+    "react-router-dom": "^6.3.0",
+    "react-spring": "^9.4.5",
+    "react-table": "^7.8.0",
     "swr": "^1.2.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.0",
+    "@iconify/icons-mdi": "^1.2.14",
+    "@iconify/react": "^3.2.1",
+    "@playwright/test": "^1.22.2",
+    "@storybook/addon-actions": "^6.5.3",
+    "@storybook/addon-essentials": "^6.5.3",
+    "@storybook/addon-interactions": "^6.5.3",
+    "@storybook/addon-links": "^6.5.3",
+    "@storybook/builder-vite": "^0.1.35",
+    "@storybook/react": "^6.5.3",
+    "@storybook/testing-library": "^0.0.11",
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.2.179",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/node": "^17.0.21",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/react-table": "^7.7.12",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "@typescript/analyze-trace": "^0.9.0",
     "@vitejs/plugin-react": "^1.0.7",
+    "autoprefixer": "^10.4.7",
+    "babel-loader": "^8.2.5",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-storybook": "^0.5.12",
+    "postcss": "^8.4.13",
+    "postcss-import": "^14.1.0",
     "prettier": "2.5.1",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.5.4",
-    "vite": "^2.8.0"
+    "utility-types": "^3.10.0",
+    "vite": "^2.8.0",
+    "vite-tsconfig-paths": "^3.4.1"
   },
   "overrides": {
     "@mui/x-data-grid": {
